@@ -1,3 +1,10 @@
+Wed Feb 08 23:02:43 2023  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: shut up warning, make graphing window be owned by
+	  their parent, make things work more nicely on something like i3wm
+
+	* src/gnome-genius.c: used fclose on popened stream, whoops
+
 Wed Apr 20 15:46:47 2022  Jiri (George) Lebl <jirka@5z.com>
 
 	* lib/number_theory/primes.gel: Update to newest data from GIMPS
